[gd_scene load_steps=44 format=2]

[ext_resource path="res://Sprites/Player/idle/JEV STAND0002.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/MainPlayer.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player/MainSM.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Player/walk/JEVSKATE0003.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/walk/JEVSKATE0004.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/idle/JEV STAND0004.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/walk/JEVSKATE0001.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/walk/JEVSKATE0005.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/idle/JEV STAND0001.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/walk/JEVSKATE0006.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/walk/JEVSKATE0007.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/walk/JEVSKATE0002.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/walk/JEVSKATE0008.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/idle/JEV STAND0003.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/walk/JEVSKATE0010.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/jump/jevjump0001.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/jump/jevjump0008.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Player/jump/jevjump0005.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Player/jump/jevjump0009.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Player/fall/jevfall0004.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Player/fall/jevfall0005.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Player/jump/jevjump0003.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Player/jump/jevjump0004.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Player/walk/JEVSKATE0009.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Player/jump/jevjump0007.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Player/fall/jevfall0001.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Player/fall/jevfall0002.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Player/jump/jevjump0006.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Player/fall/jevfall0003.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Player/jump/jevjump0010.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Player/jump/jevjump0002.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Player/fall/jevfall0006.png" type="Texture" id=32]
[ext_resource path="res://Scripts/Player/ActionMachine.gd" type="Script" id=33]
[ext_resource path="res://Sprites/Player/hurt/jev hurt0002.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Player/hurt/jev hurt0003.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Player/hurt/jev hurt0004.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Player/hurt/jev hurt0006.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Player/hurt/jev hurt0005.png" type="Texture" id=38]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 37 ) ],
"loop": true,
"name": "Hurt",
"speed": 24.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 32 ) ],
"loop": true,
"name": "Fall",
"speed": 24.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 31 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 30 ) ],
"loop": false,
"name": "Jump",
"speed": 24.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 1 ), ExtResource( 14 ), ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 24.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 24 ), ExtResource( 15 ) ],
"loop": true,
"name": "Run",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5, 32.5 )

[sub_resource type="Animation" id=3]
resource_name = "Damage"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Flash"
length = 0.36
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 0, 0, 1, 0, 1, 0, 1, 0, 1, 0 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "None"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
jump_length = 0.45

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 2 )
animation = "Idle"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.5, 4.5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( 5, 4 )
rotation = 1.5708
scale = Vector2( 5.8, 1 )
enabled = true
cast_to = Vector2( 0, 35 )

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( -14, 4 )
rotation = -1.5708
scale = Vector2( 5.8, 1 )
enabled = true
cast_to = Vector2( 0, 35 )

[node name="WallSlideCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ActionMachine" type="Node2D" parent="."]
script = ExtResource( 33 )
__meta__ = {
"_edit_lock_": true
}

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashTime" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Damage = SubResource( 3 )
anims/Flash = SubResource( 4 )
anims/None = SubResource( 5 )

[node name="InvulTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="WallSlideStickyTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Sounds" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="WallSlideStickyTimer" to="StateMachine" method="_on_WallSlideStickyTimer_timeout"]
